# bse-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.claude/: PLAN.md
.github/workflows/: ci.yml
src/: api.rs  client.rs  compose.rs  dir_reader.rs  dir_writer.rs  error.rs  fields.rs  ints.rs  lib.rs  lut.rs  lut_data.rs  manip.rs  misc.rs  notes.rs  prelude.rs  printing.rs  references.rs  sort.rs
src/cli/: check.rs  common.rs  handlers.rs  main.rs  mod.rs
src/readers/: cp2k.rs  crystal.rs  gamess_us.rs  genbas.rs  helpers.rs  mod.rs  molcas.rs  molpro.rs  nwchem.rs  read.rs  turbomole.rs  veloxchem.rs
src/refconverters/: bib.rs  common.rs  convert.rs  endnote.rs  mod.rs  ris.rs
src/writers/: bdf.rs  cp2k.rs  crystal.rs  dalton.rs  demon2k.rs  fhiaims.rs  g94.rs  gamess_uk.rs  gamess_us.rs  genbas.rs  jaguar.rs  libmol.rs  mod.rs  molcas.rs  molcas_library.rs  molpro.rs  nwchem.rs  orca.rs  pqs.rs  qchem.rs  qcschema.rs  ricdwrap.rs  turbomole.rs  veloxchem.rs  write.rs
tests/: get_basis_json.rs  test_get_basis.rs  test_notes.rs  test_read_basis.rs  test_readme.rs
tests/python_ref/: get_basis.py  get_basis_fmt.py  get_basis_json.py  get_notes.py  get_truhlar_calendarize.py  read_basis_fmt.py
