[package]
name = "bse"
version = "0.1.2"
edition = "2021"
rust-version = "1.82.0"
description = "Basis Set Exchange (BSE) library in Rust for quantum chemistry applications."
license = "Apache-2.0"
repository = "https://github.com/RESTGroup/bse-rs"
keywords = ["chemistry", "quantum"]
categories = ["science"]

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bse-rs"
path = "src/cli/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
cached = { version = "0.55" }
duplicate = { version = "2.0" }
textwrap = { version = "0.16" }
itertools = { version = "0.14" }
derive_builder = { version = "0.20" }
lazy_static = { version = "1.5" }
phf = { version = "0.12", features = ["macros"] }
regex = { version = "1.11" }
libm = { version = "0.2" }
md5 = { version = "0.8" }
ureq = { version = "3.0", features = ["json"], optional = true }
deunicode = { version = "1.6" }
clap = { version = "4", features = ["derive", "color", "suggestions"] }
clap_complete = { version = "4" }
shellexpand = { version = "3" }
toml = { version = "0.8" }

[features]
default = ["remote"]
remote = ["dep:ureq"]

[dev-dependencies]
assert-json-diff = { version = "2.0" }
rstest = { version = "0.25" }
similar = { version = "2.7" }

[profile.dev]
opt-level = 2
